Fixing CheckExamples.